syntax = "proto3";

package users.v1;

option go_package = "github.com/lyckety/async_arch/golang-service/pkg/grpc/users/v1;users";

import "google/protobuf/timestamp.proto";

service UsersService {
    rpc CreateOrUpdateUser(CreateOrUpdateUserRequest) returns (CreateOrUpdateUserResponse) {}
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
    rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse) {}
    rpc GetUserByName(GetUserByNameRequest) returns (GetUserByNameResponse) {}
}

message CreateOrUpdateUserRequest {
    User user = 1;
}

message CreateOrUpdateUserResponse {}

message DeleteUserRequest {
    string username = 1;
}

message DeleteUserResponse {}

message GetAllUsersRequest {}

message GetAllUsersResponse {
    repeated User users = 1;
}

message GetUserByNameRequest {
    string username = 1;
}

message GetUserByNameResponse {
    User user = 1;
}

message User {
    string username = 1;
    string email = 2;
    google.protobuf.Timestamp date_of_birth = 3;
}
